[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unified-databricks-api"
version = "0.1.0"
description = "Unified Databricks API client for account and workspace with DataFrame conversion."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Aliyarappa" }
]
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.0.0",
]

[project.optional-dependencies]
spark = [
  "pyspark>=3.4.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.14.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
