[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rehladigital-aws-dbx-tools"
version = "0.1.13"
description = "Production-focused Databricks API toolkit by Rehla Digital Inc for workspace and account automation on AWS."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Rehla Digital Inc" }
]
keywords = ["databricks", "aws", "api", "data-engineering", "automation", "rehla-digital"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: System :: Distributed Computing",
]
dependencies = [
  "requests>=2.31.0",
  "pandas>=2.0.0",
]

[project.optional-dependencies]
spark = [
  "pyspark>=3.4.0",
]
dev = [
  "pytest>=8.0.0",
  "pytest-mock>=3.14.0",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/rehladigital/rehla-aws-databricks-tools"
Repository = "https://github.com/rehladigital/rehla-aws-databricks-tools"
Issues = "https://github.com/rehladigital/rehla-aws-databricks-tools/issues"
